--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: LLMs and R coding
+title: ChatGPT for data analysis
 remote_theme: ubc-library-rc/rc-theme
 color_scheme: rc
 github_repo_url: "https://github.com/ubc-library-rc/AI_for_coding/" 
